# es-client

./: .env  .env.chrome  .env.desktop_linux  .env.desktop_macos  .env.desktop_windows  .env.edge  .env.firefox  .env.server  .env.tsbrowser  .env.utools  .env.web  .gitignore  .murphy.yml  LICENSE  README.en.md  README.md  auto-imports.d.ts  components.d.ts  index.html  jsconfig.json  manifest.json  package-lock.json  package.json  plugin.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vue.config.js  windows打包脚本.iss
chrome/: manifest.json
config/: vite.chrome.ts  vite.electron.ts  vite.firefox.ts  vite.server.ts  vite.tauri.ts  vite.utools.ts
docs/: README.md  _coverpage.md  _sidebar.md  function.md  index.html  progress.md
electron/: .gitignore  main.js  main.ts  package.json  windows打包脚本.iss
env/: .env  .env.chrome  .env.desktop_linux  .env.desktop_macos  .env.desktop_windows  .env.edge  .env.electron  .env.firefox  .env.server  .env.tauri  .env.tsbrowser  .env.utools  .env.vscode
firefox/: manifest.json
public/: editor.js  index.js  json.html
server/: es-client服务器接口.http  go.mod  go.sum  http-client.env.json  main.go  main.ts  package.json  tsconfig.json  接口文档.http
src-chrome/: README.md  dist.pem  manifest.json  package.json  tsconfig.json  webpack.config.js
src-edge/: Readme.md  manifest.json
src-electron/: main.js  package.json  pnpm-lock.yaml  preload.js  tsconfig.json
src-firefox/: manifest.json
src-java/: pom.xml
src-server/: .gitignore  Dockerfile  go.mod  go.sum  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
(+811 files in other folders)
