[package]
name = "es-client"
version = "3.1.4"
description = "elasticsearch客户端"
authors = ["esion"]
license = "Apache2.0"
repository = "https://gitee.com/qiaoshengda/es-client"
default-run = "es-client"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.3", features = [ "window-create", "clipboard-write-text", "notification-all", "shell-open", "http-all", "updater"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
